kubernetes-manifests/procatserdep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: productcatalogservice-prod
  namespace: prod
  labels:
    app: productcatalogservice
    version: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
      version: prod
  template:
    metadata:
      labels:
        app: productcatalogservice
        version: prod
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: server
          image: kurtosistech/productcatalogservice:main
          ports:
            - containerPort: 8070
          livenessProbe:
            httpGet:
              path: /health
              port: 8070
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8070
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: IfNotPresent
      terminationGracePeriodSeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
