kubernetes-manifests/trace-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: trace-router
  labels:
    dev.kardinal.app-id: kardinal-manager
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: trace-router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-router
  namespace: default
  labels:
    dev.kardinal.app-id: kardinal-manager
    app: trace-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-router
  template:
    metadata:
      labels:
        app: trace-router
    spec:
      serviceAccountName: kardinal-manager
      containers:
        - name: trace-router
          image: kurtosistech/kardinal-router:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: trace-router-redis
  namespace: default
  labels:
    dev.kardinal.app-id: kardinal-manager
    app: trace-router-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: trace-router-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-router-redis
  labels:
    dev.kardinal.app-id: kardinal-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-router-redis
  template:
    metadata:
      labels:
        app: trace-router-redis
    spec:
      serviceAccountName: kardinal-manager
      containers:
        - name: redis
          image: bitnami/redis:6.0.8
          ports:
            - containerPort: 6379
